# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  Chess  README.md
.cache/clangd/index/: Bishop.cpp.0CD6AE9E53192574.idx  Bishop.cpp.599ED30F965316D6.idx  Board.cpp.E4C818A606766F3B.idx  Board.cpp.F3D065CE519F1433.idx  King.cpp.89E0E834AE1CA2F1.idx  King.cpp.A7DDBDE3346D3872.idx  Knight.cpp.6ED389E423F7F4D3.idx  Knight.cpp.A75E4B0F99DF0070.idx  Pawn.cpp.526DB9DB7EC61490.idx  Pawn.cpp.75CA2193C1EAF557.idx  Piece.cpp.37C335649BAC4C04.idx  Piece.cpp.F863BA9610BE9439.idx  Pieces.cpp.00EFE8BF1E4C86E2.idx  Pieces.cpp.5433F33C65303374.idx  Pieces.h.B497128493F53BF3.idx  Pieces.h.F0AA3716B21734DF.idx  Queen.cpp.2D7E39DD7AAE8181.idx  Queen.cpp.84F41B3740D4B481.idx  Rook.cpp.7283115C988DF0F9.idx  Rook.cpp.D2E82C2227811DE6.idx  ansi_lib.hpp.5430DB090576D28B.idx  ansi_lib.hpp.86163B2FC2FD8486.idx  board.cpp.083912485E93FE29.idx  board.cpp.D7B53AD8774AE33A.idx  board.h.16835053040CA338.idx  board.h.8F2EAA5AECEA4730.idx  board_utils.cpp.FE1F4C3E128515D8.idx  board_utils.cpp.FF3201B02587FD6A.idx  board_utils.h.B89C1EDA1CD41A3E.idx  board_utils.h.E31F147F17F683FA.idx  chess_lib.h.32E99DA3783C1503.idx  chess_lib.h.D198A6ED62CE08E7.idx  fen.cpp.089439AF9D7D8DBC.idx  fen.cpp.734AA9B6ED1DDDFD.idx  game_logic.cpp.268A9C29D0609365.idx  game_logic.cpp.E42E411646B12D17.idx  game_logic.h.3169FFCD0FC1C05A.idx  game_logic.h.C98765CAB3C6C1F0.idx  game_utils.h.A06040C2BF64E966.idx  game_utils.h.D0430ADEF82EE8A6.idx  (+44 more)
Ansi-Text-Manipulation-Library/AnsiTextLibrary/: CMakeLists.txt
Chess/: CMakeLists.txt  Chess
Chess/src/: main.cpp
Chess/src/Board/: Board.cpp  board.h  board_utils.cpp  board_utils.h  chess_notation.cpp  fen.cpp  king_checks.cpp  movement.cpp  pgn.cpp  special_piece_moves.cpp  structs.h
Chess/src/Game/: game_logic.cpp  game_logic.h
Chess/src/Tests/: test_fens.h
Chess/tests/: tests.cpp
ChessLogic/: Bishop.cpp  BlackPieces.cpp  BoardFunctions.cpp  CMakeLists.txt  ChessLogic.dev  ChessLogic.layout  King.cpp  Knight.cpp  Makefile.win  Pawn.cpp  Piece.cpp  Pieces.cpp  Queen.cpp  Rook.cpp  WhitePieces.cpp  board_declarations.h  board_functions.cpp  chess_notation.cpp  declarations.h  declarations.hpp  game_logic.cpp  main.cpp  notation.h  piece_declarations.h
ChessLogic/src/: chess_lib.h  main.cpp
ChessLogic/src/Board/: Board.cpp  board.h  board_declarations.h  board_functions.cpp  board_utils.cpp  board_utils.h  chess_notation.cpp  game_logic.cpp  game_logic.h  king_checks.cpp  special_piece_moves.cpp  structs.h
ChessLogic/src/Game/: game_logic.cpp  game_logic.h
ChessLogic/src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Pieces.cpp  Pieces.h  Queen.cpp  Rook.cpp  WhitePieces.cpp  piece_declarations.h
ChessLogic/src/Tests/: test_fens.h  tests.cpp  tests.h
ChessLogic/src/text/: text.cpp  text.h
include/: Pieces.h  board.h  board_utils.h  game_logic.h  game_menu.h  game_utils.h  gui.h  notation.h  rendering.h
src/: chess_lib.h  main.cpp
src/Board/: Board.cpp  board.h  board_utils.cpp  board_utils.h  king_checks.cpp  movement.cpp  pgn.cpp  special_piece_moves.cpp
src/GUI/: gui.cpp  gui.h
src/GUI/Board/: board.cpp  board.h
src/GUI/Rendering/: rendering.cpp  rendering.h
src/Game/: game_logic.cpp
src/Menu/: menu.cpp  menu.h
src/Notation/: fen.cpp  pgn.cpp
src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Pieces.cpp  Pieces.h  Queen.cpp  Rook.cpp
tests/: test_fens.h  tests.cpp
